<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="#FF5722">

    <TextView
        android:id="@+id/tvcodigo"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:text="@string/c_digo" />

    <TextView
        android:id="@+id/tvnombre"
        android:layout_width="100dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/nombre" />

    <TextView
        android:id="@+id/tvcontenido"
        android:layout_width="100dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/contenido" />

    <TextView
        android:id="@+id/tvprecio"
        android:layout_width="100dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tprecio" />

    <TextView
        android:id="@+id/tvcantidad"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:text="@string/cantidad_oo" />



</LinearLayout>
